修正翻譯說明

--- a/administrator/language/zh-TW/zh-TW.com_zoearth_img_check.ini
+++ b/administrator/language/zh-TW/zh-TW.com_zoearth_img_check.ini
@@ -1,4 +1,6 @@
 ; com_zoearth_img_check
 
 COM_ZOEARTH_IMG_CHECK="圖片整理元件"
-
+COM_ZIC_NOTE="注意!"
+COM_ZIC_NOTE_CONTENT="這邊只會搜尋本機的JPG.JPEG.PNG.BMP.GIF資料"
+COM_ZIC_MAX_FILE_LIST="最大檔案列表數量"
